force-app/main/default/objects/Account/fields/Account_Created_On__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_On__c</fullName>
    <label>Account Created On</label>
    <type>Date</type>
</CustomField>