force-app/main/default/objects/Account/fields/Billing_Address_Percent__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Percent__c</fullName>
    <formula>(IF(NOT(ISBLANK(BillingStreet)),1,0) +
IF(NOT(ISBLANK(BillingCity)),1,0) +
IF(NOT(ISBLANK(BillingState)),1,0) +
IF(NOT(ISBLANK(BillingPostalCode)),1,0) +
IF(NOT(ISBLANK(BillingCountry)),1,0)
) * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>