force-app/main/default/objects/Account/fields/Close_All_Opp__c.field-meta.xml
<CustomField>
    <fullName>Close_All_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close All Opp</label>
    <type>Checkbox</type>
</CustomField>