force-app/main/default/objects/Account/fields/Contact_Count_New__c.field-meta.xml
<CustomField>
    <fullName>Contact_Count_New__c</fullName>
    <label>Contact Count New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>