force-app/main/default/objects/Account/fields/Credit_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Credit_on_Account__c</fullName>
    <label>Credit on Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>