force-app/main/default/objects/Account/fields/Geocode_Service__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Service__c</fullName>
    <label>Geocode Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google Maps</fullName>
            </value>
            <value>
                <fullName>QGIS</fullName>
            </value>
            <value>
                <fullName>Esri</fullName>
            </value>
            <value>
                <fullName>TomTom Geocoder</fullName>
            </value>
            <value>
                <fullName>Mapbox</fullName>
            </value>
            <value>
                <fullName>OpenCage</fullName>
            </value>
            <value>
                <fullName>USGeocoder</fullName>
            </value>
            <value>
                <fullName>GoogleGeoCode</fullName>
            </value>
            <value>
                <fullName>USGeoCode</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>