force-app/main/default/objects/Account/fields/High_Priority_Case__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Case__c</fullName>
    <label>High Priority Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>