force-app/main/default/objects/Account/fields/Max_Amount_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Max Amount Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>