force-app/main/default/objects/Account/fields/New_Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>New_Contact_Count__c</fullName>
    <label>New Contact Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>