force-app/main/default/objects/Account/fields/Number_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Employees__c</fullName>
    <label>Number Of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>