force-app/main/default/objects/Account/fields/Oppo_Count_Batch__c.field-meta.xml
<CustomField>
    <fullName>Oppo_Count_Batch__c</fullName>
    <label>Oppo Count Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>