force-app/main/default/objects/Account/fields/OppoCount__c.field-meta.xml
<CustomField>
    <fullName>OppoCount__c</fullName>
    <label>OppoCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>