force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF(OR(
BillingState = &quot;Bihar&quot;,
BillingState = &quot;UP&quot;,
BillingState = &quot;Jharkhand&quot;
), &quot;East&quot;,
IF(OR(
BillingState = &quot;Kerala&quot;,
BillingState = &quot;Tamil Nadu&quot;
),&quot;South&quot;,
IF(OR(
BillingState = &quot;Rajasthan&quot;,
BillingState = &quot;Gujrat&quot;
),&quot;West&quot;,
IF(OR(
BillingState = &quot;Delhi&quot;,
BillingState = &quot;Haryana&quot;
),&quot;North&quot;,
&quot;Abcd&quot; 
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>