force-app/main/default/objects/Account/fields/Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days__c</fullName>
    <formula>Expiry_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>