force-app/main/default/objects/Account/fields/Revenue_at_risk__c.field-meta.xml
<CustomField>
    <fullName>Revenue_at_risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revenue at risk</label>
    <type>Checkbox</type>
</CustomField>