force-app/main/default/objects/Account/fields/Shipping_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Type__c</fullName>
    <label>Shipping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>