force-app/main/default/objects/Account/fields/Total_No_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Opportunities__c</fullName>
    <label>Total No of Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>