force-app/main/default/objects/Account/fields/Total_Number_Of_Contcats__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Contcats__c</fullName>
    <label>Total Number Of Contcats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>