force-app/main/default/objects/Account/fields/Total_Open_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Opportunity_Count__c</fullName>
    <label>Total Open Opportunity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>