force-app/main/default/objects/Account/recordTypes/B2B.recordType-meta.xml
<RecordType>
    <fullName>B2B</fullName>
    <active>true</active>
    <label>B2B</label>
</RecordType>