force-app/main/default/objects/Account/recordTypes/Profile_Level_Account.recordType-meta.xml
<RecordType>
    <fullName>Profile_Level_Account</fullName>
    <active>true</active>
    <label>Profile Level Account</label>
</RecordType>