force-app/main/default/objects/Account/recordTypes/Profile_Level_Account_2.recordType-meta.xml
<RecordType>
    <fullName>Profile_Level_Account_2</fullName>
    <active>true</active>
    <label>Profile Level Account 2</label>
</RecordType>