force-app/main/default/objects/Account/validationRules/Address_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISBLANK( ShippingStreet ),ISBLANK( ShippingCity ),ISBLANK( ShippingCountry ))</errorConditionFormula>
    <errorDisplayField>ShippingStreet</errorDisplayField>
    <errorMessage>Enter the valid address</errorMessage>
</ValidationRule>