force-app/main/default/objects/Account/validationRules/Annual_Revenue.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Revenue</fullName>
    <active>false</active>
    <errorConditionFormula>OR(AnnualRevenue &lt; 0, AnnualRevenue &gt; 1000000
)</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Enter the correct data</errorMessage>
</ValidationRule>