force-app/main/default/objects/Account/validationRules/Month_and_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Month_and_Year</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
YEAR( Account_Created_On__c ) &lt;&gt; YEAR(TODAY()),
MONTH(Account_Created_On__c) &lt;&gt; MONTH(TODAY())
)</errorConditionFormula>
    <errorDisplayField>Account_Created_On__c</errorDisplayField>
    <errorMessage>Enter the current month and year</errorMessage>
</ValidationRule>