force-app/main/default/objects/Account/validationRules/Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Numeric</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(AccountNumber)||
NOT( ISNUMBER(AccountNumber))</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>Enter the numeric character</errorMessage>
</ValidationRule>