force-app/main/default/objects/Account/validationRules/Required_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Phone</fullName>
    <active>false</active>
    <errorConditionFormula>$Setup.Validation_Setting__c.Required_Phone_No__c = TRUE 
&amp;&amp; ISBLANK(Phone)</errorConditionFormula>
    <errorMessage>Phone Number Required</errorMessage>
</ValidationRule>