force-app/main/default/objects/Account/validationRules/Seven.validationRule-meta.xml
<ValidationRule>
    <fullName>Seven</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(AccountNumber) || LEN(AccountNumber) &lt;&gt; 7</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>Enter the valid data</errorMessage>
</ValidationRule>