force-app/main/default/objects/Account/validationRules/Weekday.validationRule-meta.xml
<ValidationRule>
    <fullName>Weekday</fullName>
    <active>false</active>
    <errorConditionFormula>OR(  WEEKDAY( Account_Created_On__c ) = 1,
  WEEKDAY( Account_Created_On__c ) = 7)</errorConditionFormula>
    <errorDisplayField>Account_Created_On__c</errorDisplayField>
    <errorMessage>Enter the weekday</errorMessage>
</ValidationRule>