force-app/main/default/objects/Account/listViews/Account_List_View.listView-meta.xml
<ListView>
    <fullName>Account_List_View</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Contact_Count__c</field>
        <operation>equals</operation>
        <value>5</value>
    </filters>
    <label>Account List View</label>
</ListView>